# qBreakpad

./: CMakeLists.txt  README.md
handler/: CMakeLists.txt  QBreakpadGlobal.h  QBreakpadHandler.cpp  QBreakpadHandler.h  QBreakpadHttpUploader.h  qBreakpadConfig.cmake.in
